WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211250
Inline reportBlockedPortFailed and reportAuthenticationChallengeBlocked
https://bugs.webkit.org/show_bug.cgi?id=211250
Summary
Inline reportBlockedPortFailed and reportAuthenticationChallengeBlocked
Rob Buis
Reported
2020-04-30 13:11:32 PDT
These two static methods have only one caller each, so we can just inline them at the call site since there is nothing tying them to FrameLoader.
Attachments
Patch
(5.07 KB, patch)
2020-04-30 13:13 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-04-30 13:13:03 PDT
Created
attachment 398085
[details]
Patch
Rob Buis
Comment 2
2020-04-30 14:25:32 PDT
Comment on
attachment 398085
[details]
Patch Note that other solutions are possible as well, like making these private methods in the caller classes, or finding a different place as free functions, I just do not see the relation to FrameLoader.
EWS
Comment 3
2020-04-30 23:50:59 PDT
Committed
r260985
: <
https://trac.webkit.org/changeset/260985
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398085
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-04-30 23:51:14 PDT
<
rdar://problem/62707204
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug