Inline reportBlockedPortFailed and reportAuthenticationChallengeBlocked https://bugs.webkit.org/show_bug.cgi?id=211250

Patch by Rob Buis <rbuis@igalia.com> on 2020-04-30
Reviewed by Alex Christensen.

These two static methods have only one caller each, so we can just
inline them at the call site since there is nothing tying them to FrameLoader.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::willSendRequest):
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::reportBlockedPortFailed): Deleted.
(WebCore::FrameLoader::reportAuthenticationChallengeBlocked): Deleted.
* loader/FrameLoader.h:
* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::didBlockAuthenticationChallenge):

Canonical link: https://commits.webkit.org/224167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260985 268f45cc-cd09-0410-ab3c-d52691b4dbfc